# fastapi-creator

./: README.md  pyproject.toml
fastapi_creator/: __init__.py  scaffold.py
src/fastapi_creator/: cli.py
tests/: test_cli.py  test_scaffold.py
