[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-creator"
version = "0.1.0"
description = "CLI to generate scaffold for modular FastAPI projects"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
fastc = "fastapi_creator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_creator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
