[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-creator"
version = "0.1.0"
description = "CLI to generate scaffold for modular FastAPI projects"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Seu Nome", email = "seu@email.com" }]
keywords = ["fastapi", "cli", "scaffold", "boilerplate"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/jigordev/fastapi-creator"
Repository = "https://github.com/jigordev/fastapi-creator"
Issues = "https://github.com/jigordev/fastapi-creator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
fastc = "fastapi_creator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_creator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
